<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.main.modify"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/btn_circular"
            android:drawableTop="@drawable/baseline_arrow_back_24"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/more_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/btn_circular"
            android:drawableTop="@drawable/baseline_more_horiz_24"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setup" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/punchline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/punchline" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="25dp"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>